rot13 API: DO NOT MERGE.
This is an attempt at adding a pointless web API just so I can learn about how
it's done in WebKit.

This API calls through to the UI process to request some processing. It doesn't
yet do anything and this is incomplete.

The API can be exercised from devtools using:

  window.navigator.rot13("Some text")

--- a/Source/WebKit/Shared/WebCoreArgumentCoders.serialization.in
+++ b/Source/WebKit/Shared/WebCoreArgumentCoders.serialization.in
@@ -133,6 +133,13 @@ enum class WebCore::CookieConsentDecisionResult : uint8_t {
     Dissent,
 };
 
+header: <WebCore/Rot13Result.h>
+enum class WebCore::Rot13Result : uint8_t {
+    Failure,
+    Success,
+};
+
+
 header: <WebCore/IDBResultData.h>
 enum class WebCore::IDBResultType : uint8_t {
     Error,
